--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,30 +1,193 @@
-<div class="row">
-	<div class="col p-0">
-
-		<div class="homepage-splash jumbotron-fluid jumbotron">
-
-			<div class="homepage-image-overlay">
-				<h1 class="homepage-image-overlay__title">THE RIME OF THE ANCYENT MARINERE<br>
-					<small class="homepage-image-overlay__subtitle" >IN SEVEN PARTS.</small><br>
-					<small class="homepage-image-overlay__author" >Samuel Taylor Coleridge</small>
-				</h1>
-			</div>
-
+<div class="w-100 vh-100 dt">
+	<div class="v-mid dtc">
+    <header class="bg-white sans-serif">
+      <div class="mw9 center pa4 pt5-ns ph7-l">
+        <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
+          <span class="head-shadow bg-white lh-copy black pa1 tracked-tight">
+          Hello, I am Orlando Vazquez.
+        </h3>
+      <!-- </div>
+      <div class="mw9 center pa4 pt5-ns ph7-l"> -->
+			<p class="f3 measure-wide">
+					I live in Vancouver, British Columbia, Canada.
+			</p>
+			<p class="f3 measure-wide">
+					I am a software engineer and project lead at <a
+					href="https://offworldsim.com">Offworld Defence Simulations</a>.
+			</p>
+			<p class="f3 measure-wide">
+					I specialize in using <a href="https://unrealengine.com">Unreal
+					Engine</a> to create defence-oriented training, research and
+					simulation software.
+			</p>
+      <ul class="f3">
+				<% if (Object.keys(public.journal._data).length > 0) { %>
+					<li><a href="#journal">Journal</a></li>
+				<% } %>
+				<li><a href="https://github.com/orlandov">Github</a></li>
+				<li><a href="https://www.linkedin.com/in/orlandovazquez/">LinkedIn</a></li>
+				<li><a href="/resume">Resume</a></li>
+				<li><a href="https://twitter.com/orlandov">Twitter</a></li>
+      </ul>
 		</div>
+    </header>
 	</div>
-</div> <!-- end of row -->
-
-<div class="row">
-	<div class="col homepage__intro-wrapper">
-		<div class="vignette">		
-			<p class="homepage__intro-paragraph">How a Ship having passed the Line was driven by<br>
-			Storms to the cold Country towards the South Pole;<br>
-			and how from thence she made her course to the<br>
-			tropical Latitude of the Great Pacific Ocean; and<br>
-			of the strange things that befell; and in what<br>
-			manner the Ancyent Marinere came back to his<br>
-			own Country.</p>
-		</div>
-	</div>
-	
 </div>
+<!--
+<div class="georgia vh-100 left dt ma">
+    <header class="dtc v-mid tc ph3 ph4-l black sans-serif">
+      <div class="mw9 center pa4 pt5-ns ph7-l">
+        <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
+          Hello I am, <span class="bg-black-90 lh-copy white pa1 tracked-tight">
+					  Orlando Vazquez
+          </span>
+        </h3>
+      <div class="">
+          <p class="f3 measure-wide">
+              I live in Vancouver, British Columbia, Canada.
+          </p>
+          <p class="f3 measure-wide">
+              I am a software engineer and project lead at <a
+              href="https://offworldsim.com">Offworld Defence Simulations</a>.
+          </p>
+          <p class="f3 measure-wide">
+              I specialize in using <a href="https://unrealengine.com">Unreal
+              Engine</a> to create defence-oriented training, research and
+              simulation software.
+          </p>
+      <ul class="f3">
+      <% if (Object.keys(public.journal._data).length > 0) { %>
+        <li><a href="#journal">Journal</a></li>
+      <% } %>
+      <li><a href="https://github.com/orlandov">Github</a></li>
+      <li><a href="https://www.linkedin.com/in/orlandovazquez/">LinkedIn</a></li>
+      <li><a href="https://twitter.com/orlandov">Twitter</a></li>
+      <li><a href="/resume">Resume</a></li>
+      </ul>
+    </div>
+      </div>
+    </header>
+</div>
+-->
+
+<!-- <div class="georgia vh-100 w-50 dt ma">
+  <div class="dtc v-mid tc ph3 ph4-l">
+      <div class="f1 f-headline-l bold">Hello, I am <span class="bg-black white">Orlando Vazquez</span></div>
+
+      <div class="">
+          <p class="f3 measure-wide">
+              I live in Vancouver, British Columbia, Canada.
+          </p>
+          <p class="f3 measure-wide">
+              I am a software engineer and project lead at <a
+              href="https://offworldsim.com">Offworld Defence Simulations</a>.
+          </p>
+          <p class="f3 measure-wide">
+              I specialize in using <a href="https://unrealengine.com">Unreal
+              Engine</a> to create defence-oriented training, research and
+              simulation software.
+          </p>
+      <ul class="f3">
+      <% if (Object.keys(public.journal._data).length > 0) { %>
+        <li><a href="#journal">Journal</a></li>
+      <% } %>
+      <li><a href="https://github.com/orlandov">Github</a></li>
+      <li><a href="https://www.linkedin.com/in/orlandovazquez/">LinkedIn</a></li>
+      <li><a href="https://twitter.com/orlandov">Twitter</a></li>
+      <li><a href="/resume">Resume</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+-->
+
+<!--
+ <article class="vh-100 dt w-100 bg-dark-pink">
+  <div class="dtc v-mid tc white ph3 ph4-l">
+    <h1 class="f6 f2-m f-subheadline-l fw6 tc">Vertically centering things in css is easy!</h1>
+  </div>
+</article>
+-->
+
+<!-- <div id="front-splash">
+<article class="helvetica pa3 pa5-ns">
+  <h1 class="f4 f4-m">or.lan.do</h1>
+  <h1 class="f3 f1-m f-headline-l">Orlando Vazquez</h1>
+  <p class="measure lh-copy">
+    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+    vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+    no sea takimata sanctus est Lorem ipsum dolor sit amet.
+  </p>
+  <p class="measure lh-copy">
+    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+    vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+    no sea takimata sanctus est Lorem ipsum dolor sit amet.
+  </p>
+</article>
+</div>
+-->
+
+<!--
+<div class="georgia vh-100 w-50 dt  ma">
+  <div class="dtc v-mid tc ph3 ph4-l">
+    <div class="helvetica ma">
+    <a name="journal"></a>
+    <h1><a href="/journal">Journal</a></h1>
+
+    <% for(var slug in public.journal._data) { %>
+      <a href="/journal/<%= slug %>" class=""><%= public.journal._data[slug].title %></a>
+      <p><%= public.journal._data[slug].date %></p>
+      <%- partial("journal/" + slug) %>
+    <% }; %>
+    </div>
+</div>
+  </div>
+</div>
+-->
+
+<a name="journal"></a>
+<% for(var slug in public.journal._data) { %>
+  <article class="mh-60">
+    <header class="<%= public.journal._data[slug].bg_color %> sans-serif">
+      <div class="mw9 center pa4 pt5-ns ph7-l">
+        <time class="f6 mb2 dib ttu tracked"><small><%= public.journal._data[slug].date %></small></time>
+        <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
+          <span class="bg-black-90 lh-copy white pa1 tracked-tight">
+					  <a class="white" href="/journal/<%= slug %>" class=""><%= public.journal._data[slug].title %></a>
+          </span>
+        </h3>
+        <h4 class="f3 fw1 georgia i"><%= public.journal._data[slug].subtitle %></h4>
+      </div>
+    </header>
+    <div class="pa4 ph7-l georgia mw9-l center">
+				<%- partial("journal/" + slug) %>
+
+				<span class="bg-back-90 lh-copy">
+					Filed under:
+				 <% for(var tag in public.journal._data[slug].tags) { %>
+						<a class="b" href=""><%= public.journal._data[slug].tags[tag] %></a>
+					<% } %>
+				</span>
+				<!--
+        <p class="f5 f3-ns lh-copy measure georgia">
+          Theodore Sturgeon was a science fiction author, critic, and the basis for Kurt Vonnegut's recurring character Kilgore Trout. He was prolific, authoring over 200 pieces himself and critiquing around 400 others.
+        </p>
+        <p class="f5 f3-ns lh-copy measure georgia">
+          In 1958 he published a piece in Venture proclaiming what he called "Sturgeon's Revelation"
+        </p>
+      <p class="f6 f5-ns lh-copy measure i pl4 bl bw1 b--gold mb4">
+        I repeat Sturgeon's Revelation, which was wrung out of me after twenty years of wearying defense of science fiction against attacks of people who used the worst examples of the field for ammunition, and whose conclusion was that ninety percent of SF is crud. Using the same standards that categorize 90% of science fiction as trash, crud, or crap, it can be argued that 90% of film, literature, consumer goods, etc. is crap. In other words, the claim (or fact) that 90% of science fiction is crap is ultimately uninformative, because science fiction conforms to the same trends of quality as all other artforms.
+      </p>
+      <p class="f5 f4-ns lh-copy measure mb4">
+      You don't have to bounce a tennis ball very far in San Francisco before it will hit two developers complaining about how many js tools/frameworks there are for development in 2015 and how much unneccessary complexity they add. Doing a search on twitter for 'too many js tools' or 'yet another js framework' returns... a lot of people lamenting the current state of affairs.
+    </p>
+  
+      <p class="f5 f4-ns lh-copy measure">
+      This is most likely, the wrong conversation for us as a community, to be having. The presence of bad tools - shouldn't discourage us from wanting more tools or frameworks. There are more books published in a single day than I will ever be able to read in my lifetime. But this does not make me sad. Or overwhelm me. Mostly I think about how excited I am to read the best books that are being published. And this is where we should push the conversation. How do we build better tools? What does that look like?
+    </p>
+     -->
+    </div>
+  </article>
+<% }; %>
