--- a/public/partials/_header.ejs
+++ b/public/partials/_header.ejs
@@ -1,4 +1,4 @@
-<div class="row header-bar">
+<!-- <div class="row header-bar">
 	<nav class="navbar navbar-expand-md header-bar__navbar">
 		<div class="navbar-nav">
 		    <a href="/" class="nav-link nav-item text-light <%- current.source == 'index' ? 'active' : 'non-active' %>">Home</a>
@@ -6,3 +6,4 @@
 	    </div>
 	</nav>
 </div>	
+-->
