--- a/_harp/public/index.ejs
+++ b/_harp/public/index.ejs
@@ -7,16 +7,16 @@
           Hello, I am Orlando Vazquez.
         </h3>
 			<p class="f3 measure-wide">
-					I live in Vancouver, British Columbia, Canada.
-			</p>
-			<p class="f3 measure-wide">
-					I am a software engineer and project lead at <a
+					I am the Head of Engineering at <a
 					href="https://offworldsim.com">Offworld Defence Simulations</a>.
 			</p>
 			<p class="f3 measure-wide">
 					I specialize in using <a href="https://unrealengine.com">Unreal
 					Engine</a> to create defence-oriented training, research and
 					simulation software.
+			</p>
+			<p class="f3 measure-wide">
+					I live in Vancouver, British Columbia, Canada.
 			</p>
       <ul class="f3">
 				<li><a href="https://github.com/orlandov">Github</a></li>
