--- a/_harp/public/css/main.scss
+++ b/_harp/public/css/main.scss
@@ -1,7 +1,8 @@
 
 body {
 
-	//background-image: url("https://unsplash.com/photos/PxypFiQMkIk/download?force=true");
+//	background-image: url("https://unsplash.com/photos/PxypFiQMkIk/download?force=true");
+	background-image: url("https://i2.wp.com/blog.j2sw.com/wp-content/uploads/2020/06/gray-airplane-control-panel-3402846-scaled.jpg?w=2560&ssl=1");
 	background-color: #eeeeee;
 }
 a {
@@ -22,6 +23,7 @@ a {
 
 .dtc {
     display: table-cell;
+
 }
 
 .fw6 {
@@ -33,7 +35,7 @@ a {
 }
 
 .w-100 {
-    width: 100%;
+    width: 60%;
 }
 
 //.w-50 {
